syntax = "proto3";
package database;
option go_package = "github.com/JanMeckelholt/running/grpc/database";
import "google/protobuf/empty.proto";

service Database {
  rpc UpsertClient(Client) returns (google.protobuf.Empty) {}
  rpc UpdateClient(UpdateRequest) returns (Client) {}
  rpc GetClient(ClientId) returns (Client) {}
}

message ClientId {
  string clientId =1;
}

message Client {
  string clientId = 1;
  string clientSecret = 2;
  string token = 3;
  string refreshToken = 4;
}

message UpdateRequest {
  string clientId=1;
repeated kvPair kvPairs=2;
}

message kvPair {
 string key = 1;
 string value =2;
}

message TokenResponse {
  oneof response {
    SuccessResponse success_response = 1;
    ErrorResponse error_response = 2;
  }
}

message SuccessResponse {
  string message =1;
}
message ErrorResponse {
  string error = 1;
}